overflow fix

--- a/vue/src/assets/styles/main.css
+++ b/vue/src/assets/styles/main.css
@@ -9,6 +9,7 @@
 html {
     -webkit-text-size-adjust: none;
     touch-action: manipulation;
+    overflow: unset;
 }
 
 body {
